wwwroot/css/site.css
html {
  font-size: 14px;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

.btn:focus,
.btn:active:focus,
.btn-link.nav-link:focus,
.form-control:focus,
.form-check-input:focus {
  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
}

html {
  position: relative;
  height: 100%;
}

body {
  margin-bottom: 60px;
  background-color: #f0f8ff;
  color: #2f4f4f;
  height: 100%;
  display: flex;
  flex-direction: column;
}

header,
.container-fluid {
  width: 100%;
}

.site-content {
  flex: 1 0 auto;
}

nav {
  padding-right: 15px;
}

nav a {
  color: #2f4f4f;
}

main {
  padding-left: 15px;
}

li > a:hover {
  background-color: #008080;
  color: white !important;
}

.active-link {
  background-color: #008080;
}

a {
  color: #008080;
  font-weight: bold;
}

a:hover {
  color: #014e4e;
}

img {
  width: auto;
  height: 100px;
}

footer {
  flex-shrink: 0;
  min-height: 4rem;
}

